--- a/src/features/posts/NewPostModal/newPostModal.css
+++ b/src/features/posts/NewPostModal/newPostModal.css
@@ -2,19 +2,19 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
-  z-index: var(--z-modal);
+  height: 100%;
+  width: 100%;
+  z-index: 5;
   background-color: rgba(255, 255, 255, 0.2);
   --modal-padding: 0.6rem;
 }
 
 .container-newPost {
   background-color: var(--primary-bg-color);
+  background: var(--primary-bg-color);
+  height: 100%;
   display: grid;
   grid-template-rows: auto 1fr;
-  height: 100%;
-  opacity: 1;
 }
 
 .header-newPost {
@@ -50,7 +50,7 @@
   resize: none;
 }
 
-.container-newPost .footer {
+.container-newPost .footer-newPost {
   height: 2rem;
   display: flex;
   justify-content: space-between;
