--- a/src/features/user/UserEditModal/userEditModal.css
+++ b/src/features/user/UserEditModal/userEditModal.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: rgba(255, 255, 255, 0.2);
   z-index: var(--z-modal);
 }
